<resources>
    <string name="app_name">RND-Sample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">RND Sample</string>
    <string name="nav_header_subtitle">lhg1304@nexmore.co.kr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">"Welcome !"</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="menu_home">Home</string>
    <string name="menu_firemap">Fire</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_map">Map</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="transition_name_create_chat" translatable="false">create_chat</string>

    <string name="kakao_app_key">35f0d33b29d647701431bb0d7869707b</string>
    <string name="a11y_select_map_mode">Select map mode</string>
    <string name="default_notification_channel_id">defaultNotiChannelId</string>
</resources>
